# ChangeLog for x11-libs/libX11
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.196 2012/06/24 19:18:44 ago Exp $

  24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libX11-1.5.0.ebuild:
  Stable for x86, wrt bug #419473

  22 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libX11-1.5.0.ebuild:
  Stable for amd64, wrt bug #419473

*libX11-1.5.0 (02 Jun 2012)

  02 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.5.0.ebuild, -libX11-1.4.99.902.ebuild:
  Version bump.

*libX11-1.4.99.902 (28 May 2012)

  28 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.4.99.902.ebuild, -libX11-1.4.99.901.ebuild:
  Bump to new prerelease.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libX11-1.4.4.ebuild,
  libX11-1.4.99.901.ebuild:
  keyword ~amd64-fbsd

*libX11-1.4.99.901 (16 Mar 2012)

  16 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.4.99.901.ebuild, -libX11-1.4.99.1.ebuild:
  Version bump.

  15 Jan 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  libX11-1.4.4.ebuild:
  Inform eclass that we want to eautoreconf, bug #399021.

*libX11-1.4.99.1 (05 Jan 2012)

  05 Jan 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +libX11-1.4.99.1.ebuild:
  Version bump.

  03 Oct 2011; Joseph Jezak <josejx@gentoo.org> libX11-1.4.4.ebuild:
  Marked ppc ppc64 stable for bug #380421.

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> libX11-1.4.4.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #380421

  21 Sep 2011; Jeroen Roovers <jer@gentoo.org> libX11-1.4.4.ebuild:
  Stable for HPPA (bug #380421).

  05 Sep 2011; Markus Meier <maekke@gentoo.org> libX11-1.4.4.ebuild:
  arm stable, bug #380421

  04 Sep 2011; Markus Meier <maekke@gentoo.org> libX11-1.4.4.ebuild:
  x86 stable, bug #380421

  30 Aug 2011; Tony Vroon <chainsaw@gentoo.org> libX11-1.4.4.ebuild: