@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libxcb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.91 2012/06/24 19:33:15 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libxcb/ChangeLog,v 1.92 2012/06/28 05:21:09 maekke Exp $
+
+  28 Jun 2012; Markus Meier <maekke@gentoo.org> libxcb-1.8.1.ebuild:
+  arm stable, bug #419473
 
   24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libxcb-1.8.1.ebuild:
   Stable for x86, wrt bug #419473
