@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.196 2012/06/24 19:18:44 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.197 2012/06/28 05:23:47 maekke Exp $
+
+  28 Jun 2012; Markus Meier <maekke@gentoo.org> libX11-1.5.0.ebuild:
+  arm stable, bug #419473
 
   24 Jun 2012; Agostino Sarubbo <ago@gentoo.org> libX11-1.5.0.ebuild:
   Stable for x86, wrt bug #419473
